--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-flash": "^1.10",
         "yaza/laravel-repository-service": "^5.0"
     },
     "require-dev": {
