--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "spatie/laravel-flash": "^1.10",
+        "yajra/laravel-datatables-oracle": "^11.0",
         "yaza/laravel-repository-service": "^5.0"
     },
     "require-dev": {
